Fix overlapping text

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -414,13 +414,14 @@ hr{
           right: 10px; }
       }
       span{
+        @include font-size(1.9);
         font:{
-          size: 1em;
           weight: 200; }
         display: block;
         &:nth-of-type(1) {
           color: rgba($light-green, 0.75);
-          font-size: 2em;
+          @include font-size(4);
+          padding-bottom: 10px;
         }
       }
     }
